<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:paddingLeft="15dip"
    android:paddingRight="15dp">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp"
    android:paddingLeft="8dp"
    android:paddingRight="8dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:text="General terms"/>
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/generalterms"
    android:textColor="@color/white"/>
    <TextView
        android:layout_width="wrap_content"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:text="@string/intellectualrights"/>
    <TextView
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privacypolicy"/>
</LinearLayout>
</ScrollView>